lots of cleanup work here